[gd_scene load_steps=3 format=3 uid="uid://cvqdjg5xohy5a"]

[ext_resource type="Script" path="res://Scripts/deck_list.gd" id="1_d6mnf"]
[ext_resource type="Theme" uid="uid://c2xsywtxro80x" path="res://Themes/button.tres" id="2_kyui4"]

[node name="DeckList" type="Node2D"]
script = ExtResource("1_d6mnf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 400.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 400.0
offset_bottom = 720.0
theme = ExtResource("2_kyui4")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Load" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "DECK_LOAD"

[node name="LoadDialog" type="FileDialog" parent="."]
auto_translate_mode = 2
title = "Open a File"
position = Vector2i(300, 300)
size = Vector2i(392, 175)
auto_translate = false
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
show_hidden_files = true
use_native_dialog = true

[node name="Cancel" type="Button" parent="."]
offset_left = 419.0
offset_top = 19.0
offset_right = 468.0
offset_bottom = 32.0
theme = ExtResource("2_kyui4")
text = "DECK_SELECT_CANCEL"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
